# cmd/server/wire_gen.go
@@ -33,25 +33,28 @@ func wireApp(confServer *conf.Server, confData *conf.Data, jwt *conf.JWT, paymen
 	greeterService := service.NewGreeterService(greeterUsecase)
 	userRepo := data.NewUserRepo(dataData, logger)
 	userUsecase := biz.NewUserUsecase(userRepo, logger)
-	userService := service.NewUserService(userUsecase)
+	authRepo := data.NewAuthRepo(dataData, logger)
+	authUsecase := biz.NewAuthUsecase(authRepo, jwt, logger)
+	userService := service.NewUserService(userUsecase, authUsecase)
 	paymentRepo := data.NewPaymentRepo(dataData, logger)
 	wxPayGateway := data.NewWxPayGateway(payment, logger)
 	alipayGateway := data.NewAlipayGateway(payment, logger)
-	paymentUsecase := biz.NewPaymentUsecase(paymentRepo, wxPayGateway, alipayGateway, logger)
+	notifyRepo := data.NewNotifyRepo(dataData, logger)
+	notifier := data.NewMQTTNotifier(dataData, logger)
+	notifyUsecase := biz.NewNotifyUsecase(notifyRepo, notifier, logger)
+	paymentUsecase := biz.NewPaymentUsecase(paymentRepo, wxPayGateway, alipayGateway, notifyUsecase, logger)
 	paymentService := service.NewPaymentService(paymentUsecase)
 	walletRepo := data.NewWalletRepo(dataData, logger)
 	walletUsecase := biz.NewWalletUsecase(paymentRepo, walletRepo, wxPayGateway, alipayGateway, logger)
 	walletService := service.NewWalletService(walletUsecase)
-	notifyRepo := data.NewNotifyRepo(dataData, logger)
-	notifier := data.NewMQTTNotifier(dataData, logger)
-	notifyUsecase := biz.NewNotifyUsecase(notifyRepo, notifier, logger)
 	notifyService := service.NewNotifyService(notifyUsecase)
 	supportRepo := data.NewSupportRepo(dataData, logger)
 	modelChatGateway := data.NewOpenAIChatClient(ai, logger)
 	supportUsecase := biz.NewSupportUsecase(supportRepo, modelChatGateway, userUsecase, walletUsecase, logger)
 	supportService := service.NewSupportService(supportUsecase)
 	grpcServer := server.NewGRPCServer(confServer, jwt, greeterService, userService, paymentService, walletService, notifyService, supportService, logger)
-	httpServer := server.NewHTTPServer(confServer, jwt, greeterService, userService, paymentService, walletService, notifyService, supportService, logger)
+	authService := service.NewAuthService(authUsecase)
+	httpServer := server.NewHTTPServer(confServer, jwt, greeterService, authService, userService, paymentService, walletService, notifyService, supportService, logger)
 	app := newApp(logger, grpcServer, httpServer)
 	return app, func() {
 		cleanup()
